image/imgLoader.cpp
@@ -1651,10 +1651,10 @@ bool imgLoader::ValidateRequestWithNewChannel(
     imgRequest* request, nsIURI* aURI, nsIURI* aInitialDocumentURI,
     nsIURI* aReferrerURI, ReferrerPolicy aReferrerPolicy,
     nsILoadGroup* aLoadGroup, imgINotificationObserver* aObserver,
-    nsISupports* aCX, Document* aLoadingDocument, nsLoadFlags aLoadFlags,
-    nsContentPolicyType aLoadPolicyType, imgRequestProxy** aProxyRequest,
-    nsIPrincipal* aTriggeringPrincipal, int32_t aCORSMode,
-    bool* aNewChannelCreated) {
+    nsISupports* aCX, Document* aLoadingDocument, uint64_t aInnerWindowId,
+    nsLoadFlags aLoadFlags, nsContentPolicyType aLoadPolicyType,
+    imgRequestProxy** aProxyRequest, nsIPrincipal* aTriggeringPrincipal,
+    int32_t aCORSMode, bool* aNewChannelCreated) {
   // now we need to insert a new channel request object inbetween the real
   // request and the proxy that basically delays loading the image until it
   // gets a 304 or figures out that this needs to be a new request
@@ -1718,7 +1718,7 @@ bool imgLoader::ValidateRequestWithNewChannel(
   }
 
   RefPtr<imgCacheValidator> hvc = new imgCacheValidator(
-      progressproxy, this, request, aCX, forcePrincipalCheck);
+      progressproxy, this, request, aCX, aInnerWindowId, forcePrincipalCheck);
 
   // Casting needed here to get past multiple inheritance.
   nsCOMPtr<nsIStreamListener> listener =
@@ -1878,7 +1878,7 @@ bool imgLoader::ValidateEntry(
 
     return ValidateRequestWithNewChannel(
         request, aURI, aInitialDocumentURI, aReferrerURI, aReferrerPolicy,
-        aLoadGroup, aObserver, aCX, aLoadingDocument, aLoadFlags,
+        aLoadGroup, aObserver, aCX, aLoadingDocument, innerWindowID, aLoadFlags,
         aLoadPolicyType, aProxyRequest, aTriggeringPrincipal, aCORSMode,
         aNewChannelCreated);
   }
@@ -2742,10 +2742,12 @@ NS_IMPL_ISUPPORTS(imgCacheValidator, nsIStreamListener, nsIRequestObserver,
 imgCacheValidator::imgCacheValidator(nsProgressNotificationProxy* progress,
                                      imgLoader* loader, imgRequest* request,
                                      nsISupports* aContext,
+                                     uint64_t aInnerWindowId,
                                      bool forcePrincipalCheckForCacheEntry)
     : mProgressProxy(progress),
       mRequest(request),
       mContext(aContext),
+      mInnerWindowId(aInnerWindowId),
       mImgLoader(loader),
       mHadInsecureRedirect(false) {
   NewRequestAndEntry(forcePrincipalCheckForCacheEntry, loader,
@@ -2871,6 +2873,7 @@ imgCacheValidator::OnStartRequest(nsIRequest* aRequest) {
       // Clear the validator before updating the proxies. The notifications may
       // clone an existing request, and its state could be inconsistent.
       mRequest->SetLoadId(context);
+      mRequest->SetInnerWindowID(mInnerWindowId);
       UpdateProxies(/* aCancelRequest */ false, /* aSyncNotify */ true);
       return NS_OK;
     }
