image/imgLoader.h
@@ -362,9 +362,10 @@ class imgLoader final : public imgILoader,
       nsIURI* aReferrerURI, ReferrerPolicy aReferrerPolicy,
       nsILoadGroup* aLoadGroup, imgINotificationObserver* aObserver,
       nsISupports* aCX, mozilla::dom::Document* aLoadingDocument,
-      nsLoadFlags aLoadFlags, nsContentPolicyType aContentPolicyType,
-      imgRequestProxy** aProxyRequest, nsIPrincipal* aLoadingPrincipal,
-      int32_t aCORSMode, bool* aNewChannelCreated);
+      uint64_t aInnerWindowId, nsLoadFlags aLoadFlags,
+      nsContentPolicyType aContentPolicyType, imgRequestProxy** aProxyRequest,
+      nsIPrincipal* aLoadingPrincipal, int32_t aCORSMode,
+      bool* aNewChannelCreated);
 
   nsresult CreateNewProxyForRequest(imgRequest* aRequest,
                                     nsILoadGroup* aLoadGroup,
@@ -480,6 +481,7 @@ class imgCacheValidator : public nsIStreamListener,
  public:
   imgCacheValidator(nsProgressNotificationProxy* progress, imgLoader* loader,
                     imgRequest* aRequest, nsISupports* aContext,
+                    uint64_t aInnerWindowId,
                     bool forcePrincipalCheckForCacheEntry);
 
   void AddProxy(imgRequestProxy* aProxy);
@@ -509,6 +511,7 @@ class imgCacheValidator : public nsIStreamListener,
   RefPtr<imgCacheEntry> mNewEntry;
 
   nsCOMPtr<nsISupports> mContext;
+  uint64_t mInnerWindowId;
 
   imgLoader* mImgLoader;
 
